# iosock

./: Cargo.toml  README.md
.cargo/: config.toml
src/: buffer.rs  channel_manager.rs  io.rs  lib.rs  main.rs  polled_fd.rs  pollster.rs  pty.rs  signals.rs  sockets.rs  tracing.rs
tests/: profile-size.sh  stress-test-console-io.sh  stress-test-network-io.sh
