[package]
name = "iosock"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = {version="3.5.1", features=["termination"]}
epoll = "4.4.0"
libc = "0.2.178"
